[gd_scene load_steps=5 format=2]

[ext_resource path="res://scene/beranda.gd" type="Script" id=1]
[ext_resource path="res://scene/menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://scene/target_latihan.tscn" type="PackedScene" id=3]
[ext_resource path="res://script/buat_login.gd" type="Script" id=4]

[node name="beranda" type="Spatial"]
script = ExtResource( 1 )

[node name="target_latihan" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -16.8312 )

[node name="buat_login" type="TabContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -71.0
margin_right = 160.0
margin_bottom = 33.0
size_flags_horizontal = 3
tab_align = 0
script = ExtResource( 4 )

[node name="lokal" type="Tabs" parent="buat_login"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="buat_login/lokal"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -31.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="buat_login/lokal/VBoxContainer"]
margin_right = 312.0
margin_bottom = 14.0
text = "buat akun local"

[node name="LineEdit" type="LineEdit" parent="buat_login/lokal/VBoxContainer"]
margin_top = 18.0
margin_right = 312.0
margin_bottom = 42.0
placeholder_text = "nama"

[node name="Button" type="Button" parent="buat_login/lokal/VBoxContainer"]
margin_top = 46.0
margin_right = 312.0
margin_bottom = 66.0
text = "buat"

[node name="google" type="Tabs" parent="buat_login"]
visible = false
margin_right = 40.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="buat_login/google"]
margin_right = 40.0
margin_bottom = 14.0
text = "belum siap"

[node name="facebook" type="Tabs" parent="buat_login"]
visible = false
margin_right = 40.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="buat_login/facebook"]
margin_right = 40.0
margin_bottom = 14.0
text = "belum siap"

[node name="github" type="Tabs" parent="buat_login"]
visible = false
margin_right = 40.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="buat_login/github"]
margin_right = 40.0
margin_bottom = 14.0
text = "belum siap"

[node name="Camera" type="Camera" parent="."]

[node name="GIProbe" type="GIProbe" parent="."]
extents = Vector3( 100, 100, 100 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.000192009, 0, 1, 0, 1, 0, -1, 0, 0.000192009, 0, 0, 0 )

[node name="menu" parent="." instance=ExtResource( 2 )]
visible = false

[connection signal="pressed" from="buat_login/lokal/VBoxContainer/Button" to="." method="_on_local_Button_pressed"]
[connection signal="latihan" from="menu" to="." method="_on_menu_latihan"]
